--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jaredh/npub",
-  "version": "1.0.0-beta.2",
+  "name": "@jaredh159/npub",
+  "version": "1.0.0-beta.3",
   "description": "a tool for publishing to npm",
   "bin": {
     "npub": "./dist/index.js"
